--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,15 @@
 title:            Jekyll Gitbook
 longtitle:        Jekyll Gitbook
 author:           HE Tao
-email:            sighingnow@gmail.com
+email:            gmdoukas@gmail.com
 description: >
   Build Jekyll site with the GitBook style.
 
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://sighingnow.github.io'
-baseurl:          '/jekyll-gitbook'
+url:              'https://julietsene.github.io'
+baseurl:          ''
 rss:              RSS
 
 toc:
